--- a/public/changelog/index.html
+++ b/public/changelog/index.html
@@ -27,6 +27,11 @@
         <li>Enabled real time updates of tasklist contents</li>
       </ul>
 
+      <h3>Security</h3>
+      <ul>
+        <li>Patch vulnerabilities caused by developer dependencies. (<a href="https://nodesecurity.io/advisories/755">#755</a>, <a href="https://nodesecurity.io/advisories/803">#803</a>, <a href="https://nodesecurity.io/advisories/813">#813</a>)</li>
+      </ul>
+
       <h3>Miscellaneous</h3>
       <ul>
         <li>Updated homepage content</li>
